--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -8,68 +10,8 @@ body {
   padding: 0;
 }
 
-h2,
-h3 {
-  color: #00a2c6;
-}
-
-h3 {
-  color: #00a2c6;
-}
-
-footer {
-  padding: 20px;
-  color: white;
-  background-color: #00a2c6;
-  text-align: center;
-  font-weight: bold;
-}
-
-nav a {
-  font-size: 18px;
-  font-weight: 400;
-  text-decoration: none;
-  color: white;
-}
-
-nav a:hover {
-  font-weight: bold;
-}
-
-.profile header {
-  text-align: center;
-}
-
-.featured-image {
-  width: 100%;
-  max-height: 300px;
-  object-fit: cover;
-  object-position: center;
-}
-
-.profile img {
-  width: 200px;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.jumbotron {
-  font-size: 20px;
-  padding: 60px;
-  color: white;
-  background-color: #00c8eb;
-  text-align: center;
-}
-
-nav li {
+header {
   display: inline;
-  list-style-type: none;
-  margin-right: 20px;
 }
 
 nav {
@@ -79,30 +21,107 @@ nav {
   top: 0;
 }
 
-main {
-  padding: 20px;
-  overflow: auto;
+nav ul {
+  padding-inline: 4rem;
+
+  display: flex;
+  gap: 2rem;
 }
 
-#content {
-  float: left;
-  width: 75%;
+nav li {
+  list-style-type: none;
+}
+
+nav a {
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
+
+  color: white;
+}
+
+nav a:hover {
+  font-weight: bold;
+}
+
+main {
+  padding: 20px;
+  display: flex;
+  gap: 1.5rem;
 }
 
 aside {
-  float: right;
-  width: 25%;
-  padding-left: 20px;
+  flex: 1;
 }
 
-header {
-  display: inline;
+footer {
+  padding: 20px;
+  color: #fff;
+  background-color: #00a2c6;
 }
 
-@media screen and (max-width: 1000px) {
-  #content,
-  aside {
-    width: 100%;
-    padding: 0;
+h2 {
+  color: #00a2c6;
+}
+
+h3 {
+  color: #00a2c6;
+}
+
+#content {
+  flex: 5;
+
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem 2rem;
+}
+
+.jumbotron {
+  font-size: 20px;
+  padding: 60px;
+  background-color: #00c8eb;
+  text-align: center;
+  color: white;
+}
+
+.profile header {
+  text-align: center;
+}
+
+.featured-image {
+  width: 100%;
+  max-height: 300px;
+
+  object-fit: cover;
+  object-position: center;
+}
+
+.profile img {
+  width: 200px;
+}
+
+.card {
+  box-shadow: 0 2px 8px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 20px;
+}
+
+@media screen and (max-width: 1200px) {
+  main {
+    flex-flow: column nowrap;
+  }
+
+  main aside {
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav ul {
+    justify-content: center;
+  }
+
+  main aside {
+    align-self: stretch;
   }
 }
